# XBAR

./: .env.e2e  .env.example  .env.production  .gitignore  .prettierignore  .prettierrc.json  .trigger  Horse_export.csv  LICENSE  README.md  build.ps1  build.sh  capacitor.config.ts  components.json  deepseek_json_20251025_22082d.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.prod.config.ts  setup.ps1  setup.sh  tailwind.config.js  tsconfig.json  tsconfig.test.json  vercel.json  vite.config.ts
.github/: dependabot.yml
api/: buyer-inquiries.js  buyer-responses.js  health.js  invite.js  metrics.js  sale-packets.js  telemetry.js
docs/: GO-LIVE-CHECKLIST.md  PRODUCTION-AUDIT-2026-07.md  PROJECT_HANDOFF.md  backend-data-pipeline.md  interaction-audit-checklist.md  interaction-system.md  production-upgrade-checklist.md  xbar-customer-interview-pack.md  xbar-homepage-and-sales-copy.md  xbar-phase-1-build-spec.md  xbar-positioning-and-roadmap.md  xbar-production-premium-roadmap.md  xbar-repo-audit-2026-07.md
ios-submission/: Info.plist.additions.plist  PrivacyInfo.xcprivacy  README.md
prisma/: schema.prisma  seed.ts
public/: manifest.webmanifest  robots.txt  site.webmanifest  sitemap.xml  xbar-service-worker.js
scripts/: build-local.mjs  build-marketing.mjs  build-mobile.mjs  build.ps1  capture-product-screenshots.mjs  download-and-build.ps1  download-and-install.ps1  download-latest.ps1  local-build.ps1  (+6 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: AutoUpdate.ts  SystemTray.ts  main.rs
(+424 files in other folders)
