[package]
name = "xbar-horse-management-app"
version = "0.1.0"
description = "XBAR Horse Management App"
authors = ["XBAR Beta Team"]
license = "MIT"

[dependencies]
tauri = { version = "1.0.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tauri-build = { version = "1.0.0" }
