[package]
name = "xbar-horse-management-app"
version = "1.0.0"
description = "XBAR Horse Management App"
authors = ["XBAR Beta Team"]
license = "MIT"
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = ["system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
